# FileServer

./: .clang-format  CMakeLists.txt  FileServerApplication.cpp  FileServerApplication.h  FileServerSubsystem.cpp  FileServerSubsystem.h  config.yaml  main.cpp
handlers/: RequestFactory.cpp  RequestFactory.h
handlers/errors/: ErrorHandler.cpp  ErrorHandler.h
handlers/get/: GetFileHandler.cpp  GetFileHandler.h
handlers/post/: UploadFileHandler.cpp  UploadFileHandler.h
html/errors/404/: index.html
static/html/errors/404/: index.html
utils/: utils.cpp  utils.h
